# chocanon

./: .gitignore  Cargo.toml  Makefile  README.md  rustfmt.toml
docs/: .rustc_info.json  index.html
docs/doc/: crates.js  help.html  settings.html  src-files.js
docs/doc/chocanon/: all.html  index.html  sidebar-items.js
docs/doc/chocanon/db/: enum.Error.html  index.html  sidebar-items.js  struct.Consultation.html  struct.DB.html  struct.LocationInfo.html  struct.PersonInfo.html
docs/doc/chocanon/esend/: fn.send_manager_report.html  fn.send_member_report.html  fn.send_provider_directory.html  fn.send_provider_report.html  index.html  sidebar-items.js
docs/doc/chocanon/mterm/: fn.run_man_term.html  (+2 more)
docs/doc/search.index/: 02c41625be10.js  0443014958e1.js  0575503c44a7.js  05d3d10d1214.js  0840e45f1654.js  0c4adfb03d29.js  0d4df8c8e8aa.js  0e1cd6765a52.js  0f3b75957a47.js  11b8517c76fd.js  152a1a447aff.js  15909ab5e799.js  16eba50e4a8c.js  1cc31c50dd9e.js  1cd52747abca.js  25eee10ebef5.js  2c351fd4f972.js  2e49e8d103da.js  3093aba3f219.js  317f6180c194.js  35352fa9137b.js  35526ff7f529.js  37652e55cbe5.js  3b8527558365.js  3e89d15367ec.js  40b78cce9283.js  431c58ffd3e8.js  4804cc01c446.js  4a4ba1abc109.js  4b8d2f0ad76e.js  4c730e56fcad.js  4e5f570fdf06.js  5073d0aa9667.js  53610f75073b.js  54aaa4eefd08.js  55ca4a8f25da.js  580d947aec86.js  5ba22dea3be8.js  5e7b4b107836.js  5ffd60a84c11.js  (+11 more)
src/: app.rs  db.rs  esend.rs  lib.rs  main.rs  mterm.rs  pterm.rs
src/center/: db.rs  egen.rs  esend.rs  mod.rs
tests/: integration_test.rs
tools/: view_db.fish
(+68 files in other folders)
